@@ -11,6 +11,7 @@ build_requires:
   Tags::Output::Raw: 0
   Test::More: 0
   Test::NoWarnings: 0
+  Unicode::UTF8: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
