@@ -27,7 +27,6 @@ resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=PYX-SGML-Tags';
 resources 'homepage' => 'https://github.com/michal-josef-spacek/PYX-SGML-Tags';
 resources 'repository' => 'git://github.com/michal-josef-spacek/PYX-SGML-Tags';
-test_requires 'Encode' => 0;
 test_requires 'English' => 0;
 test_requires 'Error::Pure::Utils' => 0.15;
 test_requires 'File::Object' => 0.07;
@@ -35,6 +34,7 @@ test_requires 'Tags::Output::Raw' => 0;
 test_requires 'Tags::Output::Indent' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
+test_requires 'Unicode::UTF8' => 0;
 tests_recursive;
 version '0.05';
 
