@@ -2,6 +2,7 @@
  - Add test stubs for libxml tests.
  - Rename test files to better names (raw tests).
  - Rewrite to better default of 'tags' parameter.
+ - Rewrite Encode to Unicode::UTF8.
 
 0.04 2020-04-26T18:32:33+02:00
  - Add test comments.
